# data_engineering_techniques

./: .gitignore  pyproject.toml
python4dataeng/data/: data_subset.json
python4dataeng/python/src/: exception-handling.py  json_validation.py  json_validation_complex.py  json_validation_pydantic.py  modules.py  my_classes.py  my_datetime.py  my_json.py  my_logging.py
python4dataeng/python/tests/: test_json_validation.py
