[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = ""
authors = ["victorbertoldo <eu_viktor@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
jsonschema = "^4.21.1"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
